# netcheck-windows

./: .gitignore  README.md
.github/workflows/: release.yml
scripts/: make_icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  net.rs  usage.rs
