[package]
name = "netcheck"
version = "0.1.0"
description = "Menu-bar internet reachability and live throughput monitor"
authors = ["Victor Adedini"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
# reqwest 0.13 renamed the rustls feature to `rustls` (was `rustls-tls`); it uses
# rustls-platform-verifier -> the OS trust store, so no OpenSSL on the CI runner.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2"] }
sysinfo = { version = "0.39", default-features = false, features = ["network"] }

# single-instance + autostart are desktop-only. `cfg(desktop)` is NOT understood by
# Cargo's target table (only Rust source), so gate the deps by target_os explicitly.
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"

# Windows-only: read the OS's own persistent data-usage accounting via WinRT.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Networking_Connectivity",
    "Foundation",
    "Foundation_Collections",
    "Win32_System_WinRT",
] }
chrono = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
